# tbot-tradingboat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
src/tbot_tradingboat/: __init__.py  _version.py  main.py  pnl_monitor.py
src/tbot_tradingboat/pg_database/: alertdb.py  errordb.py  orderdb.py  tbot_db.py
src/tbot_tradingboat/pg_decoder/: __init__.py  tbot_decoder.py  tbot_observer.py
src/tbot_tradingboat/pg_decoder/ib_api/: marketrules.py  tbot_api.py  tbot_order.py  tbot_order_event.py
src/tbot_tradingboat/pg_msg_apps/: discord.py  telegram.py
src/tbot_tradingboat/pg_pnl_monitor/: pnl_monitor.py
src/tbot_tradingboat/pg_redis/: alert_webhook_schema.json  listener.py  pub_sub.py  stream.py  valid_timestamp.py
src/tbot_tradingboat/utils/: constants.py  get_my_telegram_info.py  objects.py  pytest_util_crud.py  tbot_env.py  tbot_log.py  tbot_utils.py  tbot_watchdog.py  validate_redis_stream_pubsub.py
src/tbot_tradingboat/utils/examples/: dotenv
tbottmux/: pg_tmux_main.py  pg_watchdog.py  run_docker_flask_tbot.sh  run_ngrok_flask_tbot.sh  run_tbot.sh
